# nfl-analytics

./: .Rprofile  .claude_context  .coverage  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  1.R  ACCEPTANCE_TEST_FIGURES_SUMMARY.md  AGENTS.md  AUTONOMOUS_EXECUTION_STATUS.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_PHASE2_EXECUTION.md  BNN_CALIBRATION_STUDY_RESULTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  ETL_DEVOPS_BEST_PRACTICES_RESEARCH_2025.md  GEMINI.md  Makefile  PHASE2_PRIOR_SENSITIVITY_LAUNCHED.md  PHASE_2.1_EXECUTION_STATUS.md  PHASE_2.2_PRODUCTION_SUMMARY.md  PHASE_2_TO_3_SUMMARY.md  PHASE_3_RESEARCH_PLAN.md  PHASE_PLAN.md  PROJECT_STATUS.md  README.md  REORGANIZATION_COMPLETE.md  SESSION_COMPLETION_SUMMARY.md  SETUP.md  SPRINT_COMPLETED.md  SUCCESS_SUMMARY.md  THREE_AGENT_SYNTHESIS_REPORT.md  check_phase2_status.sh  compute_queue.db  compute_queue.db-shm  (+18 more)
.claude/: settings.local.json
R/: README.md  _targets.R  advanced_priors_elicitation.R  backfill_advanced_metrics.R  backfill_all_data_complete.R  backfill_complete_nflverse.R  backfill_complete_nflverse.R.bak  backfill_game_metadata.R  backfill_game_metadata_safe.R  backfill_nextgen_stats.R  backfill_pbp_advanced.R  backfill_rosters.R  baselines_glm.R  bayesian_ev_analysis.R  bayesian_model_comparison.R  bayesian_player_props.R  bayesian_receiving_with_qb_chemistry.R  bayesian_receiving_with_qb_chemistry_fixed.R  bayesian_team_ratings_brms.R  copula_dep.R  dba_audit_agent.R  debug_rosters.R  debug_rosters2.R  debug_rosters3.R  extract_bayesian_ratings.R  features_4th_down.R  features_injury_load.R  features_playoff_context.R  generate_v2_5_predictions.R  generate_v2_5_predictions_2025.R  generate_v3_missing_figures.R  init_renv.R  report_odds_coverage.R  save_ratings_to_db.R  save_ratings_with_predictions.R  score_reweight.R  (+8 more)
(+2625 files in other folders)
